Fixed BUG: Clicking Language bar won't resolve shifting. Change content of the footer next to the language bar

--- a/src/Components/Generic-Layout/Footer/index.css
+++ b/src/Components/Generic-Layout/Footer/index.css
@@ -109,7 +109,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  font-size: 0.75rem;
+  font-size: 1rem;
   padding: 0.25rem;
   text-align: center;
 }
